--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -39,8 +39,10 @@
             "react": "^18.3.1",
             "react-day-picker": "^8.10.1",
             "react-dom": "^18.3.1",
+            "react-dropzone": "^14.3.8",
             "react-hook-form": "^7.55.0",
             "react-resizable-panels": "^2.1.7",
+            "react-router-dom": "^7.8.2",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
@@ -52,7 +54,7 @@
             "@types/react-dom": "^18.3.7",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "typescript": "^5.7.2",
-            "vite": "^5.4.19"
+            "vite": "^7.1.3"
       },
       "scripts": {
             "dev": "vite",
