--- a/requirements.txt
+++ b/requirements.txt
@@ -55,3 +55,7 @@ mypy>=1.5.0
 openai>=1.0.0
 google-generativeai>=0.8.0
 # anthropic>=0.3.0  # Uncomment if using Anthropic API
+
+# Optional social media research APIs (uncomment if using)
+# tweepy>=4.14.0  # Twitter API
+# facebook-sdk>=3.1.0  # Facebook Graph API
